--- a/problem1.css
+++ b/problem1.css
@@ -1,3 +1,15 @@
-{
+h1{
+    color: darkblue;
 
+}
+h3{
+    color: black;
+}
+
+p{
+    color: blue;
+    font-size: 12px;
+}
+.backdrop{
+    background: lightgrey;
 }
